<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textViewHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/homeTitle"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBeginGame"
        android:layout_width="149dp"
        android:layout_height="84dp"
        android:layout_marginTop="197dp"
        android:layout_marginBottom="86dp"
        android:text="@string/buttonGameLabel"
        app:layout_constraintBottom_toTopOf="@+id/buttonCurrentStandings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeTitle" />

    <Button
        android:id="@+id/buttonCurrentStandings"
        android:layout_width="149dp"
        android:layout_height="84dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="215dp"
        android:text="@string/buttonResultsLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBeginGame" />
</androidx.constraintlayout.widget.ConstraintLayout>